# firecore

./: .gitignore  .pdm-python  CHANGELOG.md  main.py  pyproject.toml  test_main.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: main.py
examples/mnist/: config.py  main.py  train_config.k
firecore/: __init__.py  adapter.py  caller.py  config.py  jsonnet_loader.py  opencv.py  resolver.py  system.py
firecore/config/: __init__.py  instantiate.py
firecore/torch/: jit_utils.py
firecore/torch/meters/: average_meter.py  base.py  meter_collection.py
firecore/torch/metrics/: accuracy.py  base.py  batch_size.py
jsonnet/: firecore.libsonnet  test.jsonnet
src/firecore/: _arguments.py  _config.py  _init.py  _logging.py  _path_manager.py  _pyproject.py  engine.py  factory.py  import_utils.py  params.py  system_utils.py  torch_utils.py
src/firecore/config/: evaluate.py  lazy.py  object_pool.py  types.py
src/firecore/data/: lmdb_index.py
src/firecore/utils/: params.py
tests/: test_adapter.py  test_caller.py  test_config.py  test_global_config.py  test_import_utils.py  test_jsonnet_loader.py  test_object_pool.py  test_resolver.py
tests/config/: root_cfg.py  test_lazy_config.py
tests/config/dir1/: dir1_b.py  resnet.py
tests/configs/: exp001.jsonnet
tests/torch/: test_meters.py  test_metrics.py
