[project]
name = "firecore"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SunDoge", email = "triplez0@outlook.com" }
]
dependencies = [
    "firecore-config>=0.1.0",
    "numpy>=1",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hello = "firecore:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/firecore"]
