[project]
name = "firecore"
version = "0.6.0a0"
description = "Add your description here"
authors = [
    { name = "SunDoge", email = "triplez0@outlook.com" }
]
dependencies = [
    "numpy>=1",
    "rtoml>=0.10.0",
    "pydantic>=2.6.1",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hello = "firecore:hello"

[project.optional-dependencies]
pytorch = [
    "torch>=2.2.1",
    "torchvision>=0.17.1",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.1",
    "icecream>=2.1.3",
    "opencv-python-headless>=4.9.0.80",
    "fire>=0.5.0",
    "ipython>=8",
    "torch>=2.2.1",
    "rich>=13.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/firecore"]

[[tool.rye.sources]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
type = "index"
