[project]
name = "firecore"
version = "0.7.0a2"
description = "Framework for fast and reproducable deep learning experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1",
    "pydantic>=2.9",
    "loguru>=0.7",
    "rjsonnet>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "torch>=2",
    "pytest>=8",
    "opencv-python-headless>=4",
    "ipdb>=0.13.13",
    "lmdb>=1.5.1",
]
